--- a/index.html
+++ b/index.html
@@ -115,7 +115,9 @@
 
         var map = L.map('map', {
             zoomControl:true, maxZoom:28, minZoom:1
-        }).fitBounds([[42.18513454148871,-99.04052384038442],[40.07319543036344,-93.8328893436919]]);
+        }).fitBounds([[18.18513454148871,-120.04052384038442],[33.07319543036344,-93.8328893436919]]);
+
+        // }).fitBounds([[42.18513454148871,-99.04052384038442],[40.07319543036344,-93.8328893436919]]);
         var hash = new L.Hash(map);
         map.attributionControl.setPrefix('<a href="https://siga.conagua.gob.mx" target="_blank">CONAGUA|SGT|GAS|SIGA</a> &middot; <a href="https://leafletjs.com" title="A JS library for interactive maps">Leaflet</a> &middot');
         var autolinker = new Autolinker({truncate: {length: 30, location: 'smart'}});
